--- a/JPA/영속성콘텍스트.md
+++ b/JPA/영속성콘텍스트.md
@@ -44,3 +44,12 @@ em.remove(member);
 - 트랜잭션을 지원하는 쓰기 지연
 - 변경 감지
 - 지연 로딩
+
+em.find로 조회할 경우 영속성 콘텍스트의 1차캐시에서 먼저 조회하고,
+없을 경우 DB에서 찾아서 1차캐시에 저장하고, 결과 반환.
+애플리케이션 전체에서 교환하는 건아니고 트랜잭션이 끝나면 사라짐.
+
+
+JPA는 tx commit 할 때 flush()가 호출 됨.
+-> entity와 스냅샷(값을 읽어온 최초 시점을 저장해놓음)을 비교
+-> 다르면 update
