--- a/JPA/영속성콘텍스트.md
+++ b/JPA/영속성콘텍스트.md
@@ -69,3 +69,11 @@ em.setFlushMode(FlushModeType.COMMIT)
 FlushModeType.AUTO - 커밋이나 쿼리 실행할 때 플러시 (기본값)
 FlushModeType.COMMIT - 커밋할 때만 플러시
 ```
+
+### 준영속
+- 영속 상태의 엔티티가 영속성 콘텍스트에서 분리
+- 영속성 콘텍스트 제공하는 기능 사용 못함.
+*준영속 상태로 만드는 방법*
+- em.detach(entity) - 특정 엔티티만 준영속 상태로 전환
+- em.clear() - 영속성 콘텍스트 완전 초기화
+- em.close() - 영속성 콘텍스트 종료
