--- a/JPA/연관관계매핑.md
+++ b/JPA/연관관계매핑.md
@@ -18,3 +18,33 @@ Member findMember = em.find(Member.class, member.getId());
 Team findTeam = findMember.getTeam();
 ```
 등 편리하게 사용할 수 있음.
+
+### 양방향 연관관계와 연관관계의 주인
+
+연관관계의 주인과 mappedBy
+- 객체 연관관계 = 2개
+	- 회원 -> 팀 연관관계 1개 (단방향)
+	- 팀 -> 회원 연관관계 1개 (단방향)
+- 테이블 연관관계 = 1개
+	- 회원 <-> 팀의 연관관계 1개 (양방향)
+
+*객체의 양방향 관계*
+- 객체의 양방향 관계는 사실 양방향 관계가 아니라 서로 다른 단방향 관계 2개이다.
+- 객체를 양방향으로 참조하려면 단방향 연관관계를 2개 만들어야 한다.
+
+*테이블의 양방향 연관관계*
+- 테이블은 외래키 하나로 두 테이블의 연관관계를 관리
+- MEMBER.TEAM_ID 외래 키 하나로 양방향 연관관계 가짐(양쪽 조인할 수 있음)
+
+> 둘 중 하나로 외래키를 관리해야 한다. - 연관관계의 주인
+
+*양방향 매핑 규칙*
+- 객체의 두 관계중 하나를 연관관계의 주인으로 지정
+- 연관관계의 주인만이 외래 키를 관리(등록, 수정)
+- 주인이 아닌쪽은 읽기만 가능
+- 주인은 mappedBy 속성 사용 x
+- 주인이 아니면 mappedBy 속성으로 주인 지정
+
+> *누구를 주인으로?*
+> - 외래키가 있는 곳을 주인으로 정해라.
+> - 다(Many) 쪽이 연관관계 주인.
