--- a/JPA/연관관계매핑.md
+++ b/JPA/연관관계매핑.md
@@ -48,3 +48,27 @@ Team findTeam = findMember.getTeam();
 > *누구를 주인으로?*
 > - 외래키가 있는 곳을 주인으로 정해라.
 > - 다(Many) 쪽이 연관관계 주인.
+
+> *누구를 주인으로?*
+> - 외래키가 있는 곳을 주인으로 정해라.
+> - 다(Many) 쪽이 연관관계 주인.
+
+*양방향 매핑 시 가장 많이 하는 실수*
+- 연관관계의 주인에 값을 입력하지 않음.
+
+> 순수한 객체 관계를 고려하면 항상 양쪽 다 값을 입력해야한다.
+> -> 연관관계 편의 메소드를 생성하자 
+```
+> public void setTeam(Team team) {
+    this.team = team;
+    team.getMembers().add(this);
+}
+```
+> 양방향 매핑 시에 무한루프를 조심하자.
+
+*양방향 매핑 정리*
+- 단방향 매핑만으로도 이미 연관관계 매핑 완료
+- 양방향 매핑은 반대 방향으로 조회(객체 그래프 탐색) 기능이 추가된 것 뿐
+- JPQL에서 역방향으로 탐색할 일이 많음
+- 단방향 매핑을 잘하고 양방향은 필요할 때 추가(테이블에 영향을 주지 않음)
+- 연관관계의 주인은 비즈니스 로직이 아니라 외래 키의 위치를 기준으로 정해야함.
