--- a/JPA/연관관계매핑.md
+++ b/JPA/연관관계매핑.md
@@ -72,3 +72,23 @@ Team findTeam = findMember.getTeam();
 - JPQL에서 역방향으로 탐색할 일이 많음
 - 단방향 매핑을 잘하고 양방향은 필요할 때 추가(테이블에 영향을 주지 않음)
 - 연관관계의 주인은 비즈니스 로직이 아니라 외래 키의 위치를 기준으로 정해야함.
+
+### 단방향, 양방향
+- 테이블
+	- 외래 키 하나로 양쪽 조인 가능
+	- 사실 방향이라는 개념이 없음
+- 객체
+	- 참조용 필드가 있는 쪽으로만 참조 가능
+	- 한쪽만 참조하면 단방향
+	- 양쪽이 서로 참조하면 양방향
+
+### 연관관계의 주인
+- 테이블은 외래 키 하나로 두 테이블이 연관관계를 맺음
+- 객체 양방향 관계는 A -> B, B -> A 처럼 참조가 2군데
+- 연관관계의 주인 : 외래 키를 관리하는 참조
+- 주인의 반대편 : 외래 키 영향주지 않고, 단순 조회만
+
+### 다대일
+- 다 쪽이 , 외래키 있는 쪽이 연관관계 주인
+- @ManyToOne 반대는 놔둠
+- 양방향 하고 싶을때는 반대만 추가하고 DB 변경은 필요없음 mappedBy만 붙이면됨.
