--- a/JPA/연관관계매핑.md
+++ b/JPA/연관관계매핑.md
@@ -92,3 +92,20 @@ Team findTeam = findMember.getTeam();
 - 다 쪽이 , 외래키 있는 쪽이 연관관계 주인
 - @ManyToOne 반대는 놔둠
 - 양방향 하고 싶을때는 반대만 추가하고 DB 변경은 필요없음 mappedBy만 붙이면됨.
+
+## 일대다
+- 일이 연관관계의 주인
+- 다 쪽에 외래키가 있음
+- 객체와 테이블의 차이 떄문에 반대편 테이블의 외래키를 관리하는 특이한 구조
+- @JoinColumn을 꼭 사용해야함. 그렇지않으면 조인 테이블 방식을 사용함.(중간에 테이블 하나 추가)
+*단점*
+- 엔티티가 관리하는 외래키가 다른 테이블에 있음
+- 연관관계 관리를 위해 추가로 UPDATE SQL 실행
+
+> 일대다 단방향 매핑보다는 다대일 양방향 매핑 사용
+
+### 일대다 양방향
+- 공식적으로는 존재 X
+- @JoinColumn(insertable = false, updatable = false)
+- 읽기 전용 필드를 사용해서 양방향 처럼 사용하는 방법
+- *다대일 양방향을 사용하자*
