일대일,다대다

--- a/JPA/연관관계매핑.md
+++ b/JPA/연관관계매핑.md
@@ -1,8 +1,8 @@
-연관관계 매핑
+## 연관관계 매핑
 ### 객체를 테이블에 맞추어 데이터 중심으로 모델링하면 협력관계를 만들 수 없다.
-- 테이블은 외래 키로 조인을 사용해서 연관된 테이블을 찾는다.
-- 객체는 참조를 사용해서 연관된 객체를 찾는다.
-- 테이블과 객체 사이에는 이런 큰 간격이 있다.
+* 테이블은 외래 키로 조인을 사용해서 연관된 테이블을 찾는다.
+* 객체는 참조를 사용해서 연관된 객체를 찾는다.
+* 테이블과 객체 사이에는 이런 큰 간격이 있다.
 
 ### 단방향 연관관계
 ```
@@ -20,92 +20,115 @@ Team findTeam = findMember.getTeam();
 등 편리하게 사용할 수 있음.
 
 ### 양방향 연관관계와 연관관계의 주인
-
 연관관계의 주인과 mappedBy
-- 객체 연관관계 = 2개
-	- 회원 -> 팀 연관관계 1개 (단방향)
-	- 팀 -> 회원 연관관계 1개 (단방향)
-- 테이블 연관관계 = 1개
-	- 회원 <-> 팀의 연관관계 1개 (양방향)
+* 객체 연관관계 = 2개
+	* 회원 -> 팀 연관관계 1개 (단방향)
+	* 팀 -> 회원 연관관계 1개 (단방향)
+* 테이블 연관관계 = 1개
+	* 회원 <-> 팀의 연관관계 1개 (양방향)
 
 *객체의 양방향 관계*
-- 객체의 양방향 관계는 사실 양방향 관계가 아니라 서로 다른 단방향 관계 2개이다.
-- 객체를 양방향으로 참조하려면 단방향 연관관계를 2개 만들어야 한다.
+* 객체의 양방향 관계는 사실 양방향 관계가 아니라 서로 다른 단방향 관계 2개이다.
+* 객체를 양방향으로 참조하려면 단방향 연관관계를 2개 만들어야 한다.
 
 *테이블의 양방향 연관관계*
-- 테이블은 외래키 하나로 두 테이블의 연관관계를 관리
-- MEMBER.TEAM_ID 외래 키 하나로 양방향 연관관계 가짐(양쪽 조인할 수 있음)
+* 테이블은 외래키 하나로 두 테이블의 연관관계를 관리
+* MEMBER.TEAM_ID 외래 키 하나로 양방향 연관관계 가짐(양쪽 조인할 수 있음)
 
-> 둘 중 하나로 외래키를 관리해야 한다. - 연관관계의 주인
-
+> 둘 중 하나로 외래키를 관리해야 한다. - 연관관계의 주인  
 *양방향 매핑 규칙*
-- 객체의 두 관계중 하나를 연관관계의 주인으로 지정
-- 연관관계의 주인만이 외래 키를 관리(등록, 수정)
-- 주인이 아닌쪽은 읽기만 가능
-- 주인은 mappedBy 속성 사용 x
-- 주인이 아니면 mappedBy 속성으로 주인 지정
+* 객체의 두 관계중 하나를 연관관계의 주인으로 지정
+* 연관관계의 주인만이 외래 키를 관리(등록, 수정)
+* 주인이 아닌쪽은 읽기만 가능
+* 주인은 mappedBy 속성 사용 x
+* 주인이 아니면 mappedBy 속성으로 주인 지정
 
-> *누구를 주인으로?*
-> - 외래키가 있는 곳을 주인으로 정해라.
-> - 다(Many) 쪽이 연관관계 주인.
+> *누구를 주인으로?** 외래키가 있는 곳을 주인으로 정해라.  
+> * 다(Many) 쪽이 연관관계 주인.  
 
-> *누구를 주인으로?*
-> - 외래키가 있는 곳을 주인으로 정해라.
-> - 다(Many) 쪽이 연관관계 주인.
+> *누구를 주인으로?** 외래키가 있는 곳을 주인으로 정해라.  
+> * 다(Many) 쪽이 연관관계 주인.  
 
 *양방향 매핑 시 가장 많이 하는 실수*
-- 연관관계의 주인에 값을 입력하지 않음.
+* 연관관계의 주인에 값을 입력하지 않음.
 
-> 순수한 객체 관계를 고려하면 항상 양쪽 다 값을 입력해야한다.
-> -> 연관관계 편의 메소드를 생성하자 
-```
-> public void setTeam(Team team) {
+> 순수한 객체 관계를 고려하면 항상 양쪽 다 값을 입력해야한다.  
+> -> 연관관계 편의 메소드를 생성하자```  
+> public void setTeam(Team team) {  
     this.team = team;
     team.getMembers().add(this);
 }
-```
-> 양방향 매핑 시에 무한루프를 조심하자.
-
+```> 양방향 매핑 시에 무한루프를 조심하자.
 *양방향 매핑 정리*
-- 단방향 매핑만으로도 이미 연관관계 매핑 완료
-- 양방향 매핑은 반대 방향으로 조회(객체 그래프 탐색) 기능이 추가된 것 뿐
-- JPQL에서 역방향으로 탐색할 일이 많음
-- 단방향 매핑을 잘하고 양방향은 필요할 때 추가(테이블에 영향을 주지 않음)
-- 연관관계의 주인은 비즈니스 로직이 아니라 외래 키의 위치를 기준으로 정해야함.
+* 단방향 매핑만으로도 이미 연관관계 매핑 완료
+* 양방향 매핑은 반대 방향으로 조회(객체 그래프 탐색) 기능이 추가된 것 뿐
+* JPQL에서 역방향으로 탐색할 일이 많음
+* 단방향 매핑을 잘하고 양방향은 필요할 때 추가(테이블에 영향을 주지 않음)
+* 연관관계의 주인은 비즈니스 로직이 아니라 외래 키의 위치를 기준으로 정해야함.
 
 ### 단방향, 양방향
-- 테이블
-	- 외래 키 하나로 양쪽 조인 가능
-	- 사실 방향이라는 개념이 없음
-- 객체
-	- 참조용 필드가 있는 쪽으로만 참조 가능
-	- 한쪽만 참조하면 단방향
-	- 양쪽이 서로 참조하면 양방향
+* 테이블
+	* 외래 키 하나로 양쪽 조인 가능
+	* 사실 방향이라는 개념이 없음
+* 객체
+	* 참조용 필드가 있는 쪽으로만 참조 가능
+	* 한쪽만 참조하면 단방향
+	* 양쪽이 서로 참조하면 양방향
 
 ### 연관관계의 주인
-- 테이블은 외래 키 하나로 두 테이블이 연관관계를 맺음
-- 객체 양방향 관계는 A -> B, B -> A 처럼 참조가 2군데
-- 연관관계의 주인 : 외래 키를 관리하는 참조
-- 주인의 반대편 : 외래 키 영향주지 않고, 단순 조회만
+* 테이블은 외래 키 하나로 두 테이블이 연관관계를 맺음
+* 객체 양방향 관계는 A -> B, B -> A 처럼 참조가 2군데
+* 연관관계의 주인 : 외래 키를 관리하는 참조
+* 주인의 반대편 : 외래 키 영향주지 않고, 단순 조회만
 
 ### 다대일
-- 다 쪽이 , 외래키 있는 쪽이 연관관계 주인
-- @ManyToOne 반대는 놔둠
-- 양방향 하고 싶을때는 반대만 추가하고 DB 변경은 필요없음 mappedBy만 붙이면됨.
+* 다 쪽이 , 외래키 있는 쪽이 연관관계 주인
+* @ManyToOne 반대는 놔둠
+* 양방향 하고 싶을때는 반대만 추가하고 DB 변경은 필요없음 mappedBy만 붙이면됨.
 
 ## 일대다
-- 일이 연관관계의 주인
-- 다 쪽에 외래키가 있음
-- 객체와 테이블의 차이 떄문에 반대편 테이블의 외래키를 관리하는 특이한 구조
-- @JoinColumn을 꼭 사용해야함. 그렇지않으면 조인 테이블 방식을 사용함.(중간에 테이블 하나 추가)
+* 일이 연관관계의 주인
+* 다 쪽에 외래키가 있음
+* 객체와 테이블의 차이 떄문에 반대편 테이블의 외래키를 관리하는 특이한 구조
+* @JoinColumn을 꼭 사용해야함. 그렇지않으면 조인 테이블 방식을 사용함.(중간에 테이블 하나 추가)
 *단점*
-- 엔티티가 관리하는 외래키가 다른 테이블에 있음
-- 연관관계 관리를 위해 추가로 UPDATE SQL 실행
+* 엔티티가 관리하는 외래키가 다른 테이블에 있음
+* 연관관계 관리를 위해 추가로 UPDATE SQL 실행
 
-> 일대다 단방향 매핑보다는 다대일 양방향 매핑 사용
+> 일대다 단방향 매핑보다는 다대일 양방향 매핑 사용  
 
 ### 일대다 양방향
-- 공식적으로는 존재 X
-- @JoinColumn(insertable = false, updatable = false)
-- 읽기 전용 필드를 사용해서 양방향 처럼 사용하는 방법
-- *다대일 양방향을 사용하자*
+* 공식적으로는 존재 X
+* @JoinColumn(insertable = false, updatable = false)
+* 읽기 전용 필드를 사용해서 양방향 처럼 사용하는 방법
+* *다대일 양방향을 사용하자*
+
+## 일대일
+- 일대일 관계는 그 반대도 일대일
+- 주 테이블이나 대상 테이블 중에 외래 키 선택 가능
+- 외래 키에 데이터베이스 유니크 제약조건 추### 주 테이블에 외래키
+- 주 객체가 대상 객체의 참조 가지는 것처 주 테이블에 외래 키를 두고 대상 테이블을 찾음
+- 객체지향 개발자 선호
+- JPA 매핑 편리
+- 장점 : 주 테이블만 조회해도 대상 테이블에 데이터가 있는지 확인 가능
+- 단점 : 값이 없으면 외래키에 null 허용
+### 대상 테이블에 외래키
+- 대상 테이블에 외래 키가 존재
+- 전통적인 데이터베이스 개발자 선호
+- 장점 : 주 테이블과 대상 테이블을 일대일에서 일대다 관계로 변경할 때 테이블 구조 유지
+- 단점 : 프록시 기능의 한계로 지연 로딩으로 설정해도 항상 즉시 로딩됨
+
+## 다대다
+- 관계형 DB는 정규화된 테이블 2개로 다대다 관계를 표현할수없음
+- 연결 테이블을 추가해서 일대일, 다대일 관계로 풀어내야함.
+- 객체는 컬렉션을 사용해서 다대다 가능
+- @ManyToMany 사용
+- @JoinTable로 연결 테이블 지정
+- 다대다 매핑 : 단방향, 양방향 가능
+### 다대다 매핑 한계
+- 편리해 보이지만 실무 사용 X
+- 연결 테이블이 단순히 연결만 하고 끝나지 않음
+- 주문시간, 수량같은 데이터가 들어올 수 있음
+### 다대다 매핑 한계 극복
+- 연결 테이블용 엔티티 추가
+- @ManyToMany -> @OneToMany, @ManyToOne
