--- a/JPA/연관관계매핑.md
+++ b/JPA/연관관계매핑.md
@@ -132,3 +132,23 @@ Team findTeam = findMember.getTeam();
 ### 다대다 매핑 한계 극복
 - 연결 테이블용 엔티티 추가
 - @ManyToMany -> @OneToMany, @ManyToOne
+
+
+## N:M 관계는 1:N, N:1 로
+- 테이블의 N:M 관계는 중간 테이블을 이용해서 1:N, N:1
+- 실전에서는 중간테이블이 단순하지 않다.
+- @ManyToMany는 제약 : 필드 추가 X, 엔티티 테이블 불일치
+- 실전에서는 @ManyToMany 사용 X
+
+### @JoinColumn
+- 외래키를 매핑할때 사용
+- name : 매핑할 외래키 이름
+- referencedColumnName : 외래키가 참조하는 대상 테이블의 컬럼명
+
+### @ManyToOne
+- optional : false로 설정하면 연관된 엔티티가 항상 있어야 한다.
+- fetch 글로벌 패치 전략 설정
+- cascade : 영속성 전이 기능 사용
+
+### @OneToMany
+- mappedBy : 연관관계의 주인 필드를 선택한다.
